Bug 618907, focus frame when mousedown event on content is cancelled and chrome is currently focused, fixes focus issues with docs.google.com, r=smaug,a=blocking